--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5047,6 +5047,8 @@ textarea.form-control {
 .member .member__img {
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
 .member .member__img img {
@@ -5057,6 +5059,18 @@ textarea.form-control {
   -o-transition: all 0.8s ease;
   transition: all 0.8s ease;
   filter: grayscale(1);
+}
+
+.member__img .member-para{
+  position: absolute;
+  opacity: 0;
+
+}
+.member__img:hover .member-para{
+  position: absolute;
+  opacity: 1;
+  padding: 0 10px;
+  color: #fff;
 }
 
 .member .member__info {
@@ -5086,7 +5100,7 @@ textarea.form-control {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /* background-color: rgb(0 119 139); */
+  background-color: rgb(0 119 139);
   -webkit-transition: all 0.4s linear;
   -moz-transition: all 0.4s linear;
   -ms-transition: all 0.4s linear;
@@ -5097,7 +5111,10 @@ textarea.form-control {
 .member .member__content-inner {
   position: absolute;
   left: 0;
-  bottom: 10px;
+  color: #fff;
+  padding: 0 20px;
+  text-align: justify;
+  top: 30px;
   width: 100%;
   opacity: 0;
   -webkit-transition: all 0.4s linear;
@@ -5162,6 +5179,26 @@ textarea.form-control {
     font-size: 17px;
     margin-bottom: 0;
   }
+
+  /* .member .member__hover {
+    opacity: 0.8;
+  }
+
+  .member .member__content-inner {
+    position: absolute;
+    left: 0;
+    color: #fff;
+    padding: 0 20px;
+    text-align: justify;
+    top: 30px;
+    width: 100%;
+    opacity: 1;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+    transition: all 0.4s linear;
+} */
 }
 
 /*----------------------------
@@ -7242,7 +7279,7 @@ textarea.form-control {
 
 @media only screen and (min-width: 1400px) {
   .banner-1 .inner-padding {
-    padding: 115px 120px;
+    padding: 50px 120px;
   }
 }
 
